# wasm-maze

./: Cargo.toml  LICENSE  README.md  index.html  index.js
src/: direction.rs  generate.rs  geometry.rs  lib.rs  solve.rs
src/generate/: generator.rs  randomised_depth_first_search.rs  wilson.rs
src/solve/: a_star_search.rs  randomised_depth_first_search.rs  solver.rs  wall_follower_search.rs
